Fix top margins on mobile

--- a/src/components/canvas_views/About.css
+++ b/src/components/canvas_views/About.css
@@ -7,3 +7,8 @@
   text-align: left;
   width: 90%;
 }
+@media only screen and (max-width: 768px)  {
+  .About {
+    margin-top: 38% !important;
+  }
+}
