--- a/src/components/canvas_views/Home.css
+++ b/src/components/canvas_views/Home.css
@@ -3,7 +3,7 @@
   grid-template:
     "text pic" min-content
     / 3fr 1fr;
-  margin-top: 0px !important;
+  margin-top: 10% !important;
   position: relative;
   width: 100%;
 }
@@ -29,7 +29,7 @@
     grid-template:
       "pic"
       "text";
-    margin-top: 120px !important;
+    margin-top: 40% !important;
   }
   .Home-content {
     font-size: unset;
