--- a/src/components/canvas_views/Portfolio.css
+++ b/src/components/canvas_views/Portfolio.css
@@ -1,16 +1,6 @@
-/* .Portfolio {
-  position: relative;
-  height: 100%;
-  width: 100%;
-} */
-/* 
+
 @media only screen and (max-width: 768px) {
   .Portfolio {
-    min-height: 100vh;
+    margin-top: 30%;
   }
 }
-@media only screen and (orientation: portrait) and (min-width: 1000px) {
-  body {
-    min-height: 100vh;
-  }
-} */
