--- a/src/components/canvas_views/Skills.css
+++ b/src/components/canvas_views/Skills.css
@@ -34,6 +34,7 @@
 @media only screen and (max-width: 768px) {
   .Skills {
     font-size: 1.2em;
+    margin-top: 20%;
   }
   .Skills-category {
     padding: 5% 10% 10% 10%;
